# signos

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/: BG.chr  BG.pal  SPR.chr  SPR.pal  animations.yaml  boot-bg.pal  boot-screen.nam  boot-screen.nss  draft.nss  level-select-bg.chr  level-select-bg.pal  level-select-spr.chr  level-select-spr.pal  level-select.nam  level-select.nss  main-bg.chr  main-bg.pal  main-spr.chr  main-spr.pal  metasprites.nss  metatiles.map  metatiles.nss  signos.ldtk  title-screen.nss  title.nam
ca65src/: CMakeLists.txt  ggsound.asm  soundtrack.s
cmake/: Assets.cmake
drafts/: signos-draft.nss
music/: soundtrack.ftm  soundtrack.txt
src/: CMakeLists.txt  animation.cpp  animation.hpp  assets.hpp  assets.s  attributes.cpp  attributes.hpp  bank-helper.hpp  banked-asset-helpers.cpp  banked-asset-helpers.hpp  banked-asset-helpers.s  boot-screen.cpp  boot-screen.hpp  card.hpp  charset.hpp  common.hpp  config.s  level-screen.cpp  level-screen.hpp  level-select-screen.cpp  level-select-screen.hpp  levels.cpp  levels.hpp  main.cpp  metatiles.hpp  queue.hpp  robot.cpp  robot.hpp  signal.cpp  signal.hpp  soundtrack-ptr.hpp  soundtrack.hpp  title-screen.cpp  utils.cpp
tools/: animator  generate-metasprites  generate-metatiles  ldtk-tool  map-parser  nexxt.rb  soundtrack-enums
